# 3tankista

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  GS_INITIALIZED.cpp  GS_LOGINED.cpp  GS_RESTARTED.cpp  client.cpp  client.h  game.cpp  game.h  game_events.h  game_object.h  game_types.h  input_system.cpp  input_system.h  main.cpp  menu_system.cpp  menu_system.h  models.cpp  models.h  obstacle.h  player.cpp  player.h  position_component.h  server_system.cpp  server_system.h  simple_fsm.h
src/client/: client.cpp  client.h  player.cpp  player.h
src/components/: adapter_player_id_component.h  adapter_vehicle_id_component.h  attack_matrix_component.cpp  attack_matrix_component.h  base_id_component.h  capture_points_component.h  catapult_id_component.h  current_player_component.h  hard_repair_id_component.h  health_component.cpp  health_component.h  hex_map_component.cpp  hex_map_component.h  kill_points_component.h  light_repair_id_component.h  main_player_component.h  material_component.cpp  material_component.h  name_component.h  observer_component.h  obstacle_id_component.h  order_component.h  player_id_component.h  position_component.cpp  position_component.h  shape_component.cpp  shape_component.h  shoot_range_bonus.h  size_component.h  spawn_position_component.h  state_component.h  tank_type_component.h  texture_component.cpp  texture_component.h  texturecomponent.cpp  texturecomponent.h  transform.cpp  transform.h  transform_component.cpp  transform_component.h  (+5 more)
src/entities/: base.cpp  base.h  content.cpp  content.h  health.cpp  health.h  health_bar.cpp  health_bar.h  map.cpp  map.h  obstacle.cpp  obstacle.h  player.cpp  player.h  spawn.cpp  spawn.h  spawn_points.cpp  spawn_points.h  tank.cpp  tank.h  text.h  world.cpp  world.h
src/enums/: action.h  cell_state.h  repair.h  result.h  tank_types.cpp  tank_types.h
src/game/: GS_GAMEFINISHED.cpp  GS_GAMEOVER.cpp  GS_INITIALIZED.cpp  GS_RESTARTED.cpp  GS_RUNNING.cpp  GS_STARTED.cpp  GS_TERMINATED.cpp  game.cpp  game.h  game_configuration.h  game_events.h  game_object.h  game_types.h
src/game_actions/: action_data.cpp  action_data.h  actiondata.cpp  actiondata.h  game_actions.cpp  game_actions.h  gameactions.cpp  gameactions.h  gameplay_action.cpp  gameplay_action.h  gameplayaction.cpp  gameplayaction.h  global_game_actions.cpp  global_game_actions.h  globalgameactions.cpp  globalgameactions.h
src/game_area/: game_area.cpp  game_area.h  gamearea.cpp  gamearea.h  hex_directions.cpp  hex_directions.h  hexdirections.cpp  hexdirections.h  path_finder.cpp  path_finder.h  pathfinder.cpp  pathfinder.h
src/game_state/: game_state.cpp  game_state.h  gamestate.cpp  gamestate.h  win_points.cpp  win_points.h
src/gamearea/: gamearea.h  pathfinder.cpp  pathfinder.h
src/gameplay/: gameplay.cpp  gameplay.hpp
src/gamestate/: gamestate.cpp  gamestate.h  winpoints.cpp  winpoints.h
src/map/: map.cpp  map.h
(+253 files in other folders)
